--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             <br>
             <div>
                 <ul>
-                    <br><i style="color: #12c2c2;" class="fa fa-calendar"></i>Web Developer
-                    <br><i style="color: #12c2c2;"class="fa fa-calendar"></i>Turkey, Sanliurfa
-                    <br><i style="color: #12c2c2;"class="fa fa-calendar"></i>ezdiharomerrrr@gmail.com
-                    <br><i style="color: #12c2c2;"class="fa fa-calendar"></i>0541 887 8291
+                    <br><i style="color: #12c2c2;" class="fa fa-desktop"></i>Web Developer
+                    <br><i style="color: #12c2c2;"class="fa fa-home"></i>Turkey, Sanliurfa
+                    <br><i style="color: #12c2c2;"class="fa fa-envelope"></i>ezdiharomerrrr@gmail.com
+                    <br><i style="color: #12c2c2;"class="fa fa-phone"></i>0541 887 8291
                 </ul>
 
             </div>
